--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -749,17 +749,38 @@ color: #FFFFFF;
   transform: translateY(0%);
 }
 
+/* -----CONTACT FORM-------- */
+
 .contact-form-field {
   display: block;
 }
+.contact-form-title {
+font-family: Roboto;
+font-size: 20px;
+font-weight: 700;
+line-height: 23px;
+letter-spacing: 0.03em;
+text-align: center;
+
+}
+
 .contact-form-input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  margin-top: 4px;
-  margin-bottom: 10px;
+  padding-left: 42px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
+.contact-form-input:focus {
+  outline: none;
+  border-color: #2196F3;
+}
+.contact-form-input:focus + .contact-form-icon {
+  fill: #2196F3;;
+}
+
 .text-input {
 font-style: normal;
 font-weight: 400;
@@ -775,5 +796,50 @@ color: #757575;
 .contact-form-icon {
   width: 18px;
   height: 18px;
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 
+}
+.contact-form-input-wrapper {
+  display: block;
+  margin-bottom: 10px;
+  margin-top: 4px;
+  position: relative;
+}
+
+.contact-form-massage {
+  width: 100%;
+  height: 140px;
+  margin-top: 4px;
+  padding: 12px 16px;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-massage:focus {
+  outline: none;
+  border-color: #2196F3;
+}
+.contact-form-massage::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+
+}
+.contact-form-checkbox-label {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+letter-spacing: 0.03em;
+color: #757575;
+}
+.contact-form-checkbox-label::before {
+  display: inline-block;
+  content: " ";
+  width: 16px;
+  height: 16px;
 }
