--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -583,6 +583,36 @@ margin-bottom: 30px;
     background-color: #2196F3;;
   }
 
+  .footer-form-btn {
+
+  }
+
+
+  .footer-form-btn {
+  display: block;
+  width: 200px;
+  height: 50px;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.88;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #FFFFFF;
+  background-color: #2196f3;
+  border: none;
+  border-radius: 4px;
+  margin: 0 auto;
+  
+}
+.cfooter-form-btn:hover,
+.footer-form-btn:focus {
+  background-color: #188CE8;
+  color: #ffffff;
+}
+
+
 /* -----PORTFOLIO----- */
 
 .section-projects {
@@ -815,9 +845,13 @@ color: #757575;
   width: 100%;
   height: 140px;
   margin-top: 4px;
+  
   padding: 12px 16px;
   resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .contact-form-massage:focus {
@@ -836,10 +870,55 @@ font-size: 14px;
 line-height: 24px;
 letter-spacing: 0.03em;
 color: #757575;
+display: flex;
+align-items: center;
+margin-bottom: 30px;
 }
 .contact-form-checkbox-label::before {
   display: inline-block;
-  content: " ";
+  content: '';
   width: 16px;
   height: 16px;
+  border: 1px solid #555555;
+  cursor: pointer;
+  margin-right: 8px;
+}
+.contact-form-checkbox:checked + .contact-form-checkbox-label::before {
+  background-color: #2196f3;
+  background-image: url('../img/icons.svg/sprite.svg');
+
+}
+.contact-form-checkbox:focus + .contact-form-checkbox-label::before {
+  outline: 1px solid rgba(0, 0, 255, 0.5);
+
+}
+
+
+
+.contact-form-submit-btn {
+  display: block;
+  width: 200px;
+  height: 50px;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.88;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #FFFFFF;
+  background-color: #2196f3;
+  border: none;
+  border-radius: 4px;
+  margin: 0 auto;
+  
+}
+.contact-form-submit-btn:hover,
+.contact-form-submit-btn:focus {
+  background-color: #188CE8;
+  color: #ffffff;
+}
+.contact-form-checkbox-label-link {
+  color: #2196F3;
+
 }
