--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -589,15 +589,17 @@ margin-bottom: 30px;
 .footer-form-field {
   display: flex;
   align-items: center;
+  position: relative;
 }
 .footer-form-input {
   width: 358px;
   height: 50px;
   margin-right: 12px;
-
   background-color: #2F303A;
   border: 1px solid #FFFFFF4D;
   padding-left: 16px;
+  color: #FFFFFF;
+
   
   
 }
@@ -617,14 +619,29 @@ margin-bottom: 30px;
   background-color: #2196f3;
   border: none;
   border-radius: 4px;
-  margin: 0 auto;
+
+  margin: 0 10px;
   
+
+  
+}
+
+.footer-form-icon {
+  height: 24px;
+  width: 24px;
+  position: absolute;
+  top: 50%;
+  right: 28px;
+  transform: translateY(-50%);
+
 }
 .cfooter-form-btn:hover,
 .footer-form-btn:focus {
   background-color: #188CE8;
   color: #ffffff;
 }
+
+
 
 
 /* -----PORTFOLIO----- */
