--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -560,7 +560,6 @@ margin-bottom: 30px;
   margin-right: 10px;
 }
 
-
 .footer-social-list-link {
   display: flex;
   align-items: center;
@@ -778,7 +777,20 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 50%;
   border: 1px solid #0000001A;
   cursor: pointer;
+  
 }
+
+.modal-close-btn:focus .modal-close-icon,
+.modal-close-btn:hover .modal-close-icon {
+  fill: #2196F3;
+}
+.modal-close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+
 /* OVERLAY */
 
 .overlay {
@@ -814,6 +826,7 @@ color: #FFFFFF;
 
 .contact-form-field {
   display: block;
+  margin-top: 10px;
 }
 .contact-form-title {
 font-family: Roboto;
@@ -867,15 +880,14 @@ color: #757575;
 }
 .contact-form-input-wrapper {
   display: block;
-  margin-bottom: 10px;
-  margin-top: 4px;
+  /* margin-bottom: 10px;
+  margin-top: 4px; */
   position: relative;
 }
 
 .contact-form-massage {
   width: 100%;
   height: 140px;
-  margin-top: 4px;
   
   padding: 12px 16px;
   resize: none;
@@ -893,6 +905,12 @@ color: #757575;
   color: rgba(117, 117, 117, 0.5);
 
 }
+.contact-form-checkbox-wrapper {
+  display: block;
+  margin-bottom: 30px;
+  height: 24px;
+}
+
 .contact-form-checkbox-label {
 font-family: 'Roboto';
 font-style: normal;
@@ -902,29 +920,32 @@ line-height: 24px;
 letter-spacing: 0.03em;
 color: #757575;
 display: flex;
-align-items: center;
-margin-bottom: 30px;
+/* align-items: center; */
+margin-bottom:;
+
 }
 .contact-form-checkbox-label::before {
   display: inline-block;
   content: '';
   width: 16px;
   height: 16px;
-  border: 1px solid #555555;
+  border: 1px solid #212121;
   cursor: pointer;
   margin-right: 8px;
+
 }
 .contact-form-checkbox:checked + .contact-form-checkbox-label::before {
-  background-color: #2196f3;
-  background-image: url('../img/icons.svg/sprite.svg');
+  background-image: url('../img/icon-check.jpg');
+  border: none;
 
 }
-.contact-form-checkbox:focus + .contact-form-checkbox-label::before {
-  outline: 1px solid rgba(0, 0, 255, 0.5);
+.contact-form-checkbox-label-link {
+  color: #2196F3;
 
 }
 
-
+/* .contact-form-checkbox:focus + .contact-form-checkbox-label::before {
+  outline: 1px solid rgba(0, 0, 0, 0); */
 
 .contact-form-submit-btn {
   display: block;
@@ -941,6 +962,7 @@ margin-bottom: 30px;
   background-color: #2196f3;
   border: none;
   border-radius: 4px;
+  margin-right: 0%;
   margin: 0 auto;
   
 }
@@ -949,7 +971,4 @@ margin-bottom: 30px;
   background-color: #188CE8;
   color: #ffffff;
 }
-.contact-form-checkbox-label-link {
-  color: #2196F3;
 
-}
