--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -593,14 +593,11 @@ margin-bottom: 30px;
 .footer-form-input {
   width: 358px;
   height: 50px;
-  margin-right: 12px;
   background-color: #2F303A;
   border: 1px solid #FFFFFF4D;
   padding-left: 16px;
   color: #FFFFFF;
 
-  
-  
 }
 
   .footer-form-btn {
@@ -619,7 +616,7 @@ margin-bottom: 30px;
   border: none;
   border-radius: 4px;
 
-  margin: 0 10px;
+  margin-left: 10px;
   
 
   
@@ -630,7 +627,7 @@ margin-bottom: 30px;
   width: 24px;
   position: absolute;
   top: 50%;
-  right: 28px;
+  right: 10px;
   transform: translateY(-50%);
 
 }
