--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -773,7 +773,11 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  border: 1px solid #0000001A;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+
+  /* border: 1px solid #0000001A; */
   cursor: pointer;
   
 }
