--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -862,10 +862,7 @@ font-style: normal;
 font-weight: 400;
 font-size: 12px;
 line-height: 14px;
-
-
 letter-spacing: 0.01em;
-
 color: #757575;
 
 }
@@ -885,12 +882,12 @@ color: #757575;
   /* margin-bottom: 10px;
   margin-top: 4px; */
   position: relative;
+  margin-top: 4px;
 }
 
 .contact-form-massage {
   width: 100%;
-  height: 140px;
-  
+  height: 120px;
   padding: 12px 16px;
   resize: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -922,8 +919,7 @@ line-height: 24px;
 letter-spacing: 0.03em;
 color: #757575;
 display: flex;
-/* align-items: center; */
-margin-bottom:;
+justify-content: center;
 
 }
 .contact-form-checkbox-label::before {
